# web-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  mcp_http.py  mcp_sse.py  mcp_stdio.py  pyproject.toml
browser_service/: __init__.py  browser_service.py  config.py  exception.py
docs/claude/: BROWSER_SERVICE.md  GIT.md  MCP_SERVER.md  STRUCT.md  TEST.md  URL_FETCHER.md  WEB_READER.md  WEB_SEARCH.md
docs/module/: BROWSER_SERVICE.md  MCP_SERVER.md  URL_FETCHER.md  WEB_DEV.md
docs/reference/: BAIDU_SEARCH.md
tests/: __init__.py  conftest.py  test_baidu_client.py  test_browser_service.py  test_fetcher.py  test_mcp_server.py  test_parser.py  test_url_fetcher.py  test_web_dev.py  test_web_reader.py  test_web_search.py
tests/fixtures/: sample.html
tests/test_web_dev_files/: test.html
url_fetcher/: __init__.py  config.py  exceptions.py  fetcher.py  html_parser.py  models.py  parser.py  url_fetcher.py  web_client.py
web_dev/: __init__.py  config.py  console_handler.py  dev_session.py  exceptions.py  session_manager.py  web_dev.py
web_reader/: __init__.py  config.py  exceptions.py  fetcher.py  models.py  parser.py  web_reader.py
web_search/: __init__.py  bing_client.py  client.py  config.py  exceptions.py  web_search.py
