[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-mcp"
version = "0.1.0"
description = "Model Context Protocol server for reading web pages and converting to Markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "markdownify>=0.13.1",
    "readabilipy>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "mcp>=1.26.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["web_reader", "web_search"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
