[project]
name = "web-mcp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "markdownify>=0.13.1",
    "beautifulsoup4>=4.12.0",
    "mcp>=1.26.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "python-dotenv>=1.0.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
